// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders disabled with defaultChecked 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24px;
}

.c4 {
  outline: none;
}

.c6 {
  outline: none;
}

.c5 {
  outline: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  vertical-align: middle;
  padding: 2px;
  cursor: default;
  background-color: inherit;
  color: #c0cad5;
}

.c1 svg {
  border: 1px solid transparent;
  border-radius: 4px;
  padding: 2px;
}

.c1 svg[data-name='checked'] {
  display: none;
}

.c1 svg[data-name='indeterminate'] {
  display: none;
}

.c1 > input:indeterminate ~ svg[data-name='indeterminate'] {
  display: inline-block;
  color: #c0cad5;
}

.c1 > input:indeterminate:hover ~ svg[data-name='indeterminate'] {
  color: #c0cad5;
}

.c1 > input:indeterminate ~ svg[data-name='empty'] {
  display: none;
}

.c1 > input:indeterminate ~ svg[data-name='checked'] {
  display: none;
}

.c1 > input:hover ~ svg[data-name='empty'] {
  color: #c0cad5;
}

.c1 > input:focus ~ svg {
  border: 1px solid #c0cad5;
  background-color: #f4f6f8;
}

.c1 > input:checked ~ svg[data-name='checked'] {
  display: inline-block;
  color: #c0cad5;
}

.c1 > input:checked ~ svg[data-name='empty'] {
  display: none;
}

.c1 > input:checked:focus ~ svg {
  border: 1px solid #0068ef;
  background-color: #e8f2ff;
}

.c1 > input:checked:hover ~ svg[data-name='checked'] {
  color: #c0cad5;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <div
      class="c1"
      color="primary"
      disabled=""
    >
      <input
        checked=""
        class="c2"
        color="primary"
        disabled=""
        id="check-box"
        role="checkbox"
        size="20"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="c3 c4"
        data-name="checked"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 3h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm4 14l9-8.6L17.6 7 10 14.3l-3.6-3.5L5 12.2l5 4.8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="c3 c5"
        data-name="indeterminate"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm1 8v2h10v-2H7z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="c3 c6"
        data-name="empty"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders disabled with disabled prop 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24px;
}

.c4 {
  outline: none;
}

.c6 {
  outline: none;
}

.c5 {
  outline: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  vertical-align: middle;
  padding: 2px;
  cursor: default;
  background-color: inherit;
  color: #c0cad5;
}

.c1 svg {
  border: 1px solid transparent;
  border-radius: 4px;
  padding: 2px;
}

.c1 svg[data-name='checked'] {
  display: none;
}

.c1 svg[data-name='indeterminate'] {
  display: none;
}

.c1 > input:indeterminate ~ svg[data-name='indeterminate'] {
  display: inline-block;
  color: #c0cad5;
}

.c1 > input:indeterminate:hover ~ svg[data-name='indeterminate'] {
  color: #c0cad5;
}

.c1 > input:indeterminate ~ svg[data-name='empty'] {
  display: none;
}

.c1 > input:indeterminate ~ svg[data-name='checked'] {
  display: none;
}

.c1 > input:hover ~ svg[data-name='empty'] {
  color: #c0cad5;
}

.c1 > input:focus ~ svg {
  border: 1px solid #c0cad5;
  background-color: #f4f6f8;
}

.c1 > input:checked ~ svg[data-name='checked'] {
  display: inline-block;
  color: #c0cad5;
}

.c1 > input:checked ~ svg[data-name='empty'] {
  display: none;
}

.c1 > input:checked:focus ~ svg {
  border: 1px solid #0068ef;
  background-color: #e8f2ff;
}

.c1 > input:checked:hover ~ svg[data-name='checked'] {
  color: #c0cad5;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <div
      class="c1"
      color="primary"
      disabled=""
    >
      <input
        class="c2"
        color="primary"
        disabled=""
        id="check-box"
        role="checkbox"
        size="20"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="c3 c4"
        data-name="checked"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 3h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm4 14l9-8.6L17.6 7 10 14.3l-3.6-3.5L5 12.2l5 4.8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="c3 c5"
        data-name="indeterminate"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm1 8v2h10v-2H7z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="c3 c6"
        data-name="empty"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders without the theme passed specifically 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 24px;
}

.c4 {
  outline: none;
}

.c6 {
  outline: none;
}

.c5 {
  outline: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  vertical-align: middle;
  padding: 2px;
  cursor: pointer;
  background-color: inherit;
  color: #5e6872;
}

.c1 svg {
  border: 1px solid transparent;
  border-radius: 4px;
  padding: 2px;
}

.c1 svg[data-name='checked'] {
  display: none;
}

.c1 svg[data-name='indeterminate'] {
  display: none;
}

.c1 > input:indeterminate ~ svg[data-name='indeterminate'] {
  display: inline-block;
  color: #0068ef;
}

.c1 > input:indeterminate:hover ~ svg[data-name='indeterminate'] {
  color: #049;
}

.c1 > input:indeterminate ~ svg[data-name='empty'] {
  display: none;
}

.c1 > input:indeterminate ~ svg[data-name='checked'] {
  display: none;
}

.c1 > input:hover ~ svg[data-name='empty'] {
  color: #0068ef;
}

.c1 > input:focus ~ svg {
  border: 1px solid #c0cad5;
  background-color: #f4f6f8;
}

.c1 > input:checked ~ svg[data-name='checked'] {
  display: inline-block;
  color: #0068ef;
}

.c1 > input:checked ~ svg[data-name='empty'] {
  display: none;
}

.c1 > input:checked:focus ~ svg {
  border: 1px solid #0068ef;
  background-color: #e8f2ff;
}

.c1 > input:checked:hover ~ svg[data-name='checked'] {
  color: #049;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <div
      class="c1"
      color="primary"
    >
      <input
        class="c2"
        color="primary"
        id="check-box"
        role="checkbox"
        size="20"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="c3 c4"
        data-name="checked"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 3h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm4 14l9-8.6L17.6 7 10 14.3l-3.6-3.5L5 12.2l5 4.8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="c3 c5"
        data-name="indeterminate"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3zm1 8v2h10v-2H7z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="c3 c6"
        data-name="empty"
        fill="currentcolor"
        focusable="false"
        height="24"
        role="img"
        tabindex="-1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 5c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H6zm0-2h12c1.7 0 3 1.3 3 3v12c0 1.7-1.3 3-3 3H6c-1.7 0-3-1.3-3-3V6c0-1.7 1.3-3 3-3z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
